<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:focusable="true" android:focusableInTouchMode="true"
    tools:context="com.example.ronald.fetchme.authentication.AccountSettingsActivity">

    <EditText
        android:id="@+id/editText_acc_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginTop="0dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <Button
        android:id="@+id/btn_delete_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onDeleteAccountClicked"
        android:text="@string/delete_account"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_settings_change_password"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btn_settings_change_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:onClick="onSettingsChangePasswordClicked"
        android:text="@string/change_password"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_acc_email" />

    <EditText
        android:id="@+id/editText_acc_surname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText_acc_name"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <EditText
        android:id="@+id/editText_acc_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:width="160dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintLeft_toRightOf="@+id/img_profle_picture"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/btn_save_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:onClick="onSaveAccountClicked"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NAME"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText_acc_name"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="EMAIL ADDRESS"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/editText_acc_email"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/img_profle_picture" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="SURNAME"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/editText_acc_name" />

    <ImageView
        android:id="@+id/img_profle_picture"
        android:layout_width="132dp"
        android:layout_height="124dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

</android.support.constraint.ConstraintLayout>
